css changes - stopped bleeding ov video player into other slides, resized video player is slideshow to display arrows, minor css for partner links

--- a/docroot/sites/default/themes/maxim_base/css/global.css
+++ b/docroot/sites/default/themes/maxim_base/css/global.css
@@ -225,8 +225,8 @@ section#featuredSections .featuredBlock .poll .results a { border-bottom: 1px so
 
 /* Partner links -- large*/
 .partner-links-side .view-header {margin-bottom:4px; text-align:left;}
-.partner-links-header-text .text-line {border-bottom: 6px solid #DDDDDD; float:left; width:65px;}
-.partner-links-header-text .link-text {float:left; text-align:center; width:170px; margin-top:7px; color:#aaaaaa; font-size:10pt;}
+.partner-links-header-text .text-line {border-bottom: 5px solid #DDDDDD; float:left; width:70px;}
+.partner-links-header-text .link-text {float:left; text-align:center; width:160px; margin-top:7px; color:#aaaaaa; font-size:10pt;}
 .partner-links-header-text .clear {clear: both;}
 .partner-links-large ul {border-top:3px;}
 .partner-links-large ul li {float:left; width:150px; }
